# logfmt-zerocopy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
